# webapp-stack-2022

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  openApi.yaml  pyproject.toml
src/webapp_stack_2022/: flask_app.py
src/webapp_stack_2022/common/: application_factory.py
tests/: conftest.py  dynamodb_local.py  local_flask.py  test_app_info.py
ui/: .prettierrc  package-lock.json  package.json
ui/src/: About.tsx  Layout.tsx  index.tsx
